# chercher-plugin

./: README.md  cookiecutter.json  main.py  pyproject.toml
tests/: test_cookiecutter_template.py
{{ cookiecutter.hyphenated }}/: README.md  pyproject.toml
{{ cookiecutter.hyphenated }}/{{ cookiecutter.underscored }}/: __init__.py
