[project]
name = "{{ cookiecutter.hyphenated }}"
version = "0.1.0"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"{% if cookiecutter.author_email %}, email="{{ cookiecutter.author_email }}" {% endif %}}]
license = "MIT"
classifiers = []
requires-python = ">=3.13"
dependencies = ["chercher"]

{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
{% endif %}

[project.entry-points.chercher]
{{ cookiecutter.underscored }} = "{{ cookiecutter.underscored }}"

[dependency-groups]
dev = ["pytest>=8.3.5"]
